--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 application.id = kwfappdemo
 application.name = Koala App Demo
 application.version = 0.1-2
-webCodeLanguage = en
+webCodeLanguage = ru
 
 frontControllerClass = Kwf_Controller_Front
 aclClass = Acl
