--- a/config.ini
+++ b/config.ini
@@ -8,3 +8,7 @@ frontControllerClass = Kwf_Controller_Front
 aclClass = Acl
 
 server.updateTags[] = kwf
+
+;langs
+languages.en = English 
+languages.ru = Russian
