--- a/config.ini
+++ b/config.ini
@@ -10,5 +10,8 @@ aclClass = Acl
 server.updateTags[] = kwf
 
 ;langs
-languages.en = English 
+languages.en = English
 languages.ru = Russian
+
+;watcher
+whileUpdatingShowMaintenancePage = false
